통합검색 결과 페이지 개발중

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -426,7 +426,7 @@
       	}, delay);
       	
       });
-
+debugger;
 var artstInfo = /*[[${result}]]*/ 'default';
 $(function() {    
 	var workList = artstInfo.workList;
@@ -440,162 +440,163 @@ $(function() {
 		alert("검색 결과가 없습니다.");
 	}else{
 		$("#columns2").empty();
-	}
-	for(var i=0; i<workList.length; i++){
-		workListHtml += '<figure class="item" id="'+ workList[i].workSq +'">';
-		workListHtml += '	<div class="heart on"></div>';
-		if(workList[i].dealTypCd == "AUCT" && workList[i].dealSttsCd == "IP"){
-			workListHtml += '	<div class="item-div-img active">';
-			workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
-			workListHtml += '		<div class="item-ho">';
-			workListHtml += '			<p>'+ workList[i].dealStrtDate +' - '+ workList[i].dealEndngDate +'</p>';
-			workListHtml += '			<p> 응찰수 : '+ workList[i].bidCnt +'</p>';
-			workListHtml += '				<ul><li>'+ workList[i].dealRemainingDay +'<span>day</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingHour +'<span>hrs</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
-			workListHtml += '				<h4>시작가 : '+ formatComma(workList[i].dealStrtPrc) +'</h4>';
-			workListHtml += '	</div>';
-		}
-		if(workList[i].dealTypCd == "SALE" && workList[i].dealTypCd == "IP"){
-			workListHtml += '	<div class="item-div-img sale">';
-			workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
-			workListHtml += '		<div class="item-ho2 sale-div">';
-			workListHtml += '			<h3>판매중</h3>';
-			workListHtml += '				<ul><li>'+ workList[i].dealRemainingDay +'<span>day</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingHour +'<span>hrs</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
-			workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
-			workListHtml += '	</div>';
-		}
-		if(workList[i].dealTypCd == "EN"){
-			workListHtml += '	<div class="item-div-img sold-3">';
-			workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
-			workListHtml += '	</div>';
-		}
-		workListHtml += '	<div class="item-body">';
-		workListHtml += '		<div class="uesr-s">';
-		if(workList[i].artstProfileImgUrl == null || workList[i].artstProfileImgUrl == ""){
-			workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
-		}else{
-			workListHtml += '		<img src="'+ workList[i].artstProfileImgUrl +'"/>';
-		}
-		workListHtml += '		</div>';
-		workListHtml += '		<div class="text-s">';
-		workListHtml += '			<h3>'+ workList[i].artstActvtyNm +' ('+ workList[i].artstBirthYear +')</h3>';
-		workListHtml += '			<p class="ts-1">'+ workList[i].workNm +' ('+ workList[i].workProdcYear +')</p>';
-		workListHtml += '			<p>'+ workList[i].workMatrl +'</p>';
-		workListHtml += '			<p>'+ workList[i].workSizeDepth +'x'+ workList[i].workSizeWidth +'</p>';
-		if(workList[i].dealTypCd == "AUCT"){
-			workListHtml += '			<h4>입찰가 '+ workList[i].maxBidPrc +'</h4>';
-			workListHtml += '			<p class="ts-2">';
-			workListHtml += '			'+ workList[i].dealStrtDate +' – '+ workList[i].dealEndngDate +'<br/>';
-			workListHtml += '			응찰수 : '+ workList[i].bidCnt +'<br/>';
-			workListHtml += '			'+ workList[i].dealRemainingDay +'일 '+ workList[i].dealRemainingHour +'시 '+ workList[i].dealRemainingMin +'분 '+ workList[i].dealRemainingSec +'초';
-			workListHtml += '			</p>';
-		}
-		if(workList[i].dealTypCd == "SALE"){
-			workListHtml += '			<h4>판매가 '+ workList[i].maxBidPrc +'</h4>';
-		}
-		workListHtml += '		</div>';
-		if(workList[i].authSq == 2){
-			workListHtml += '	<div class="artist active"><span>Artist</span></div>';
-		}
-		if(workList[i].authSq == 1){
-			workListHtml += '	<div class="artist"><span>Artist</span></div>';
-		}
-		workListHtml += '	</div>';
-		workListHtml += '</figure>';
-	}
-	$("#columns2").append(workListHtml).trigger("create");
 	
-	$("#artstInfo").empty();
-	$("#artstInfoModal").empty();
-	artstInfoHtml2 += '<div class="cont-title3 mg-at">';
-	artstInfoHtml2 += '<h3>Artist library</h3>';
-	artstInfoHtml2 += '</div>';
-	artstInfoHtml2 += '<div class="ad-sty">';
-	artstInfoHtml2 += '<div class="ad-user"><img src="resources/img/icon/user-2.png" /></div>';
-	//artstInfo += '<div class="ad-user"><img src="'+ artstInfo.artstProfileImgUrl +'" /></div>';
-	artstInfoHtml += '<div class="ad-text">';
-	artstInfoHtml += '	<h3>'+ artstInfo.artistInfo.artstActvtyNm +'</h3>';
-	artstInfoHtml += '	<h4>'+ artstInfo.artistInfo.artstEnglsNm +'</h4>';
-	artstInfoHtml += '	<p>'+ artstInfo.artistInfo.artstSelfIntro +'</p>';
-	artstInfoHtml += '</div>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '<dt>SNS</dt>';
-	artstInfoHtml += '<dd>';
-	artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
-	artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
-	artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-3.png" /></a>';
-	artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-4.png" /></a>';
-	artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-5.png" /></a>';
-	artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-6.png" /></a>';
-	artstInfoHtml += '</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>홈페이지</dt>';
-	artstInfoHtml += '	<dd>';
-	artstInfoHtml += '		<p>https://'+ artstInfo.artistInfo.artstHmpgUrl +'/</p>';
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '	<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>학력</dt>';
-	artstInfoHtml += '	<dd>';
-	for(var i=0; i<eductn.length; i++){
-		artstInfoHtml += '		<p>'+ eductn[i].eductnEndngDate +' '+ eductn[i].eductnNm +'</p>';
+		for(var i=0; i<workList.length; i++){
+			workListHtml += '<figure class="item" id="'+ workList[i].workSq +'">';
+			workListHtml += '	<div class="heart on"></div>';
+			if(workList[i].dealTypCd == "AUCT" && workList[i].dealSttsCd == "IP"){
+				workListHtml += '	<div class="item-div-img active">';
+				workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
+				workListHtml += '		<div class="item-ho">';
+				workListHtml += '			<p>'+ workList[i].dealStrtDate +' - '+ workList[i].dealEndngDate +'</p>';
+				workListHtml += '			<p> 응찰수 : '+ workList[i].bidCnt +'</p>';
+				workListHtml += '				<ul><li>'+ workList[i].dealRemainingDay +'<span>day</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingHour +'<span>hrs</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
+				workListHtml += '				<h4>시작가 : '+ formatComma(workList[i].dealStrtPrc) +'</h4>';
+				workListHtml += '	</div>';
+			}
+			if(workList[i].dealTypCd == "SALE" && workList[i].dealTypCd == "IP"){
+				workListHtml += '	<div class="item-div-img sale">';
+				workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
+				workListHtml += '		<div class="item-ho2 sale-div">';
+				workListHtml += '			<h3>판매중</h3>';
+				workListHtml += '				<ul><li>'+ workList[i].dealRemainingDay +'<span>day</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingHour +'<span>hrs</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
+				workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
+				workListHtml += '	</div>';
+			}
+			if(workList[i].dealTypCd == "EN"){
+				workListHtml += '	<div class="item-div-img sold-3">';
+				workListHtml += '		<img src="'+ workList[i].workMainImgUrl +'">';
+				workListHtml += '	</div>';
+			}
+			workListHtml += '	<div class="item-body">';
+			workListHtml += '		<div class="uesr-s">';
+			if(workList[i].artstProfileImgUrl == null || workList[i].artstProfileImgUrl == ""){
+				workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+			}else{
+				workListHtml += '		<img src="'+ workList[i].artstProfileImgUrl +'"/>';
+			}
+			workListHtml += '		</div>';
+			workListHtml += '		<div class="text-s">';
+			workListHtml += '			<h3>'+ workList[i].artstActvtyNm +' ('+ workList[i].artstBirthYear +')</h3>';
+			workListHtml += '			<p class="ts-1">'+ workList[i].workNm +' ('+ workList[i].workProdcYear +')</p>';
+			workListHtml += '			<p>'+ workList[i].workMatrl +'</p>';
+			workListHtml += '			<p>'+ workList[i].workSizeDepth +'x'+ workList[i].workSizeWidth +'</p>';
+			if(workList[i].dealTypCd == "AUCT"){
+				workListHtml += '			<h4>입찰가 '+ workList[i].maxBidPrc +'</h4>';
+				workListHtml += '			<p class="ts-2">';
+				workListHtml += '			'+ workList[i].dealStrtDate +' – '+ workList[i].dealEndngDate +'<br/>';
+				workListHtml += '			응찰수 : '+ workList[i].bidCnt +'<br/>';
+				workListHtml += '			'+ workList[i].dealRemainingDay +'일 '+ workList[i].dealRemainingHour +'시 '+ workList[i].dealRemainingMin +'분 '+ workList[i].dealRemainingSec +'초';
+				workListHtml += '			</p>';
+			}
+			if(workList[i].dealTypCd == "SALE"){
+				workListHtml += '			<h4>판매가 '+ workList[i].maxBidPrc +'</h4>';
+			}
+			workListHtml += '		</div>';
+			if(workList[i].authSq == 2){
+				workListHtml += '	<div class="artist active"><span>Artist</span></div>';
+			}
+			if(workList[i].authSq == 1){
+				workListHtml += '	<div class="artist"><span>Artist</span></div>';
+			}
+			workListHtml += '	</div>';
+			workListHtml += '</figure>';
+		}
+		$("#columns2").append(workListHtml).trigger("create");
+		
+		$("#artstInfo").empty();
+		$("#artstInfoModal").empty();
+		artstInfoHtml2 += '<div class="cont-title3 mg-at">';
+		artstInfoHtml2 += '<h3>Artist library</h3>';
+		artstInfoHtml2 += '</div>';
+		artstInfoHtml2 += '<div class="ad-sty">';
+		artstInfoHtml2 += '<div class="ad-user"><img src="resources/img/icon/user-2.png" /></div>';
+		//artstInfo += '<div class="ad-user"><img src="'+ artstInfo.artstProfileImgUrl +'" /></div>';
+		artstInfoHtml += '<div class="ad-text">';
+		artstInfoHtml += '	<h3>'+ artstInfo.artistInfo.artstActvtyNm +'</h3>';
+		artstInfoHtml += '	<h4>'+ artstInfo.artistInfo.artstEnglsNm +'</h4>';
+		artstInfoHtml += '	<p>'+ artstInfo.artistInfo.artstSelfIntro +'</p>';
+		artstInfoHtml += '</div>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '<dt>SNS</dt>';
+		artstInfoHtml += '<dd>';
+		artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
+		artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-3.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-4.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-5.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-6.png" /></a>';
+		artstInfoHtml += '</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>홈페이지</dt>';
+		artstInfoHtml += '	<dd>';
+		artstInfoHtml += '		<p>https://'+ artstInfo.artistInfo.artstHmpgUrl +'/</p>';
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '	<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>학력</dt>';
+		artstInfoHtml += '	<dd>';
+		for(var i=0; i<eductn.length; i++){
+			artstInfoHtml += '		<p>'+ eductn[i].eductnEndngDate +' '+ eductn[i].eductnNm +'</p>';
+		}
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>경력</dt>';
+		artstInfoHtml += '	<dd>';
+		for(var i=0; i<career.length; i++){
+			artstInfoHtml += '		<p>'+ career[i].careerEndngDate +' '+ career[i].careerNm +'</p>';
+		}
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>전시 정보</dt>';
+		artstInfoHtml += '	<dd>';
+		for(var i=0; i<exhbtn.length; i++){
+			artstInfoHtml += '		<p>'+ exhbtn[i].exhbtnEndngDate +' '+ exhbtn[i].exhbtnNm +'</p>';
+		}
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>수상</dt>';
+		artstInfoHtml += '	<dd>';
+		artstInfoHtml += '		<p>2020 Fly High, 충무로갤러리</p>';
+		artstInfoHtml += '		<p>2019 크리스마스 아트마켓, 갤러리오</p>';
+		artstInfoHtml += '		<p>2019 Falling in Animal, 비움갤러리</p>';
+		artstInfoHtml += '		<p>2019 취하다 아트페어, 프로타주갤러리</p>';
+		artstInfoHtml += '		<p>2019 be coming a collector, 연희예술극장</p>';
+		artstInfoHtml += '		<p>2019 이원생중계, 갤러리라메르</p>';
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>인터뷰영상</dt>';
+		artstInfoHtml += '	<dd>';
+		artstInfoHtml += '		<p>https://'+ artstInfo.artistInfo.artstPromtnVideoUrl +'</p>';
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		artstInfoHtml += '<dl class="ad-dl">';
+		artstInfoHtml += '	<dt>논문, 평론, 기사</dt>';
+		artstInfoHtml += '	<dd>';
+		artstInfoHtml += '		<p>2014 동심을 깨우는 강한 숨결 전, 전북대학교 국립 박물관</p>';
+		artstInfoHtml += '		<p>2013 50만원 전, 경민미술관</p>';
+		artstInfoHtml += '		<p>2013 가미갤러리 초대작가전, 가미갤러리</p>';
+		artstInfoHtml += '		<p>2013 블라블라, 인사토포하우스</p>';
+		artstInfoHtml += '	</dd>';
+		artstInfoHtml += '</dl>';
+		$("#artstInfo").append(artstInfoHtml2).trigger("create");
+		$("#artstInfo").append(artstInfoHtml).trigger("create");
+		var artstInfoButton = '<button type="button" class="the-more2 mg_t60" data-toggle="modal" data-target="#artstInfoMore">더보기</button>';
+		$("#artstInfo").append(artstInfoButton).trigger("create");
+		$("#artstInfoModal").append(artstInfoHtml).trigger("create");
+		var moreButton = '<button type="button" class="btn-more"><span>more</span></button>';
+		$("#moreButton").append(moreButton).trigger("create");
 	}
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>경력</dt>';
-	artstInfoHtml += '	<dd>';
-	for(var i=0; i<career.length; i++){
-		artstInfoHtml += '		<p>'+ career[i].careerEndngDate +' '+ career[i].careerNm +'</p>';
-	}
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>전시 정보</dt>';
-	artstInfoHtml += '	<dd>';
-	for(var i=0; i<exhbtn.length; i++){
-		artstInfoHtml += '		<p>'+ exhbtn[i].exhbtnEndngDate +' '+ exhbtn[i].exhbtnNm +'</p>';
-	}
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>수상</dt>';
-	artstInfoHtml += '	<dd>';
-	artstInfoHtml += '		<p>2020 Fly High, 충무로갤러리</p>';
-	artstInfoHtml += '		<p>2019 크리스마스 아트마켓, 갤러리오</p>';
-	artstInfoHtml += '		<p>2019 Falling in Animal, 비움갤러리</p>';
-	artstInfoHtml += '		<p>2019 취하다 아트페어, 프로타주갤러리</p>';
-	artstInfoHtml += '		<p>2019 be coming a collector, 연희예술극장</p>';
-	artstInfoHtml += '		<p>2019 이원생중계, 갤러리라메르</p>';
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>인터뷰영상</dt>';
-	artstInfoHtml += '	<dd>';
-	artstInfoHtml += '		<p>https://'+ artstInfo.artistInfo.artstPromtnVideoUrl +'</p>';
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	artstInfoHtml += '<dl class="ad-dl">';
-	artstInfoHtml += '	<dt>논문, 평론, 기사</dt>';
-	artstInfoHtml += '	<dd>';
-	artstInfoHtml += '		<p>2014 동심을 깨우는 강한 숨결 전, 전북대학교 국립 박물관</p>';
-	artstInfoHtml += '		<p>2013 50만원 전, 경민미술관</p>';
-	artstInfoHtml += '		<p>2013 가미갤러리 초대작가전, 가미갤러리</p>';
-	artstInfoHtml += '		<p>2013 블라블라, 인사토포하우스</p>';
-	artstInfoHtml += '	</dd>';
-	artstInfoHtml += '</dl>';
-	$("#artstInfo").append(artstInfoHtml2).trigger("create");
-	$("#artstInfo").append(artstInfoHtml).trigger("create");
-	var artstInfoButton = '<button type="button" class="the-more2 mg_t60" data-toggle="modal" data-target="#artstInfoMore">더보기</button>';
-	$("#artstInfo").append(artstInfoButton).trigger("create");
-	$("#artstInfoModal").append(artstInfoHtml).trigger("create");
-	var moreButton = '<button type="button" class="btn-more"><span>more</span></button>';
-	$("#moreButton").append(moreButton).trigger("create");
 });
 
       
