--- a/src/main/resources/static/css/bootstrap-select.css
+++ b/src/main/resources/static/css/bootstrap-select.css
@@ -12,11 +12,7 @@
 }
 .bootstrap-select > .btn {
   width: 100%;
-  padding: 1.3rem 2.5rem;
-  border: #e8e8e8 1px solid;
-  background-color: #f9f9f9;
-  border-radius: 0;
-  color: #333333;
+  padding-right: 25px;
 }
 .error .bootstrap-select .btn {
   border: 1px solid #b94a48;
@@ -28,8 +24,7 @@
   width: auto !important;
 }
 .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
-  width: 100%;
-  margin-top: 1rem;
+  width: 220px;
 }
 .bootstrap-select .btn:focus {
   outline: thin dotted #333333 !important;
@@ -85,22 +80,13 @@
   overflow: hidden;
   width: 100%;
   text-align: left;
-  font-size: 1.2rem;
-  color: #333333;
-  opacity: 0.5;
 }
 .bootstrap-select.btn-group .btn .caret {
   position: absolute;
   top: 50%;
-  right: 1.8rem;
+  right: 12px;
+  margin-top: -2px;
   vertical-align: middle;
-  background-image: url(../img/ba/arr-b.png);
-  background-repeat: no-repeat;
-  width: 1.9rem;
-  height: 1.1rem;
-  background-size: 100%;
-  border: none;
-  transform: translateY(-50%);
 }
 .bootstrap-select.btn-group[class*="col-"] .btn {
   width: 100%;
@@ -109,15 +95,8 @@
   min-width: 100%;
   z-index: 1035;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  top: -2px;
-  border-radius: 0;
-  border: #f8f8f8 1px solid;
-  margin: 0;
-  padding: 2rem 0;
-  /* height: 100%; */
-  bottom: auto;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .bootstrap-select.btn-group .dropdown-menu.inner {
   position: static;
@@ -130,25 +109,18 @@
 }
 .bootstrap-select.btn-group .dropdown-menu li {
   position: relative;
-  font-size: 2.4rem;
-  color: #999999;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  border-bottom: none;
 }
-/* .bootstrap-select.btn-group .dropdown-menu li:not(.disabled) a:hover small,
+.bootstrap-select.btn-group .dropdown-menu li:not(.disabled) a:hover small,
 .bootstrap-select.btn-group .dropdown-menu li:not(.disabled) a:focus small,
 .bootstrap-select.btn-group .dropdown-menu li.active:not(.disabled) a small {
   color: #64b1d8;
   color: rgba(100, 177, 216, 0.4);
-} */
+}
 .bootstrap-select.btn-group .dropdown-menu li.disabled a {
   cursor: not-allowed;
 }
 .bootstrap-select.btn-group .dropdown-menu li a {
   cursor: pointer;
-  color: #999999;
-  padding: 1rem 6.2rem;
 }
 .bootstrap-select.btn-group .dropdown-menu li a.opt {
   position: relative;
@@ -285,5 +257,4 @@
   height: 100% !important;
   opacity: 0;
 }
-.selected a{color:#333333 !important;}
 /*# sourceMappingURL=bootstrap-select.css.map */
