--- a/src/main/resources/templates/thymeleaf/result_artist.html
+++ b/src/main/resources/templates/thymeleaf/result_artist.html
@@ -5,6 +5,11 @@
 	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.mySwiper4{height:auto;}
+    	.ellipsis{
+			overflow:hidden;
+			text-overflow: ellipsis;
+			width:211px;
+    	};
     </style>
 </head>
 
@@ -24,7 +29,6 @@
 						<li class="active"><a href="#">작가</a></li>
 						<li><a href="#">컨텐트</a></li>
 					</ul>
-					<h4 class="aut-h4">1982년생 작가 검색결과 총 <span class="c-red">134</span>개</h4>
 				</div>
 				
 				<div class="reds-box aut-reds">
@@ -48,7 +52,7 @@
 				</div>
 				
 				<div>
-					<ul class="author-ul">
+					<ul class="author-ul" id="artstList">
 						<li>
 							<a class="hd-div3">
 								<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
@@ -112,7 +116,7 @@
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
-<script type="text/javascript">
+<script th:inline="javascript">
       
 $(document).ready(function () {
   $(".elm").hover(
@@ -172,9 +176,34 @@ $(window).on('resize', function(){
  		document.location.reload();
  	}, delay);
 });
-      
-      
-      
+
+var artstList = /*[[${result}]]*/ 'default';
+var searchKeyword = /*[[${searchKeyword}]]*/ 'default';
+$(function() {
+	var artstListHtml = '';
+	var totalCountHtml = '';
+	if(artstList == null){
+		alert("검색 결과가 없습니다.");
+	}else{
+		$("#artstList").empty();
+		totalCountHtml += '<h4 class="aut-h4">"'+ searchKeyword +'" 검색결과 총 <span class="c-red">134</span>개</h4>';
+		for(var i=0; i<artstList.length; i++){
+			artstListHtml += '<li>';
+			artstListHtml += '	<a class="hd-div3">';
+			artstListHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+			//artstListHtml += '		<div class="hd-bg3"><img src="'+ artstList[i].artstWorkImgUrl +'" /></div>';
+			artstListHtml += '		<div class="user-1"><img src="'+ artstList[i].artstProfileImgUrl +'"></div>';
+			artstListHtml += '		<div class="hd-text">';
+			artstListHtml += '			<h4>'+ artstList[i].artstActvtyNm +' <span class="h4-span">'+ artstList[i].artistBirthYear +'년생</span></h4>';
+			artstListHtml += '			<div class="ellipsis"><div class="hd-d1">'+ artstList[i].artstSelfIntro +'</div></div>';
+			artstListHtml += '		</div>';
+			artstListHtml += '	</a>';
+			artstListHtml += '</li>';
+		}
+		$("#artstList").append(artstListHtml).trigger("create");
+		$(".aut-top").append(totalCountHtml).trigger("create");
+	}
+});
 </script>
     
 	
